# maillagix

./: CMakeLists.txt  README.md  REAME.md
src/: main.cpp  main2.cpp  plot.gp  plot.py  plot_3.py
